syntax = "proto3";

import "google/protobuf/empty.proto";
package comments;
option go_package = "idea-store.comments.v1;commentsv1";

service Comments{
    rpc CreateComment(CreateCommentRequest) returns (google.protobuf.Empty) {}
    rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
}
message CreateCommentRequest{
    int64 user_id =1;
    int64 idea_id = 2;
    string text=3;
    string creation_date = 4;
}
message GetCommentsRequest{
    int64 idea_id = 1;
}
message GetCommentsResponse{
    repeated CommentData comments = 1;
}
message CommentData{
    int64 id = 1;
    int64 user_id = 2;
    string text = 3;
    string creation_date = 4;
    string username = 5;
    string avatar = 6;
}